name:                gbacpFireflyProy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/gbacpFireflyProy#readme
license:             BSD3
license-file:        LICENSE
author:              Alfonso Bustamante Valenzuela
maintainer:          alfonso.bustamante02@inacapmail.cl
copyright:           2017 Alfonso Bustamante Valenzuela
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Lib
      --               , Parallels.ParMonad
  other-modules:       Lib.Prelude
                     , Algorithms.Firefly 
                     , Algorithms.Gbacp
                     , Graficos.GraficoTest1
                     , Parallels.ControlParallel
                     , Parallels.ControlStrategies
                     , Reading.MatrixRead
                     , Reading.TextRead
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.1.6 && < 0.2
                     , text
                     , array
                     , exceptions
                     , parallel
                     , containers
                     , lens
                     , flow
                     , stm
                     , mtl
                     , bytestring
                     , cairo
                     , colour
                     , pango
                     , data-default-class
                     , gtk2hs-buildtools
                     , diagrams
                     , gtk
         --            , map
                     , monad-par
                     , monad-par-extras
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable gbacpFireflyProy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gbacpFireflyProy
                     , protolude >= 0.1.6 && < 0.2
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite gbacpFireflyProy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , array
                     , gbacpFireflyProy
                     , parallel
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , gbacpFireflyProy
                     , protolude >= 0.1.6 && < 0.2
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/githubuser/gbacpFireflyProy
